# StockScanner

./: .env.example  .gitignore  README.md  pyproject.toml  railway.json
config/: watchlist.yaml
docs/: PLAN.md
src/: main.py
src/graph/: aggregator.py  builder.py  state.py
src/graph/nodes/: aggregate.py  analyze.py  dedup.py  fetch.py  narrate.py  publish.py
src/indicators/: base.py  momentum.py  trend.py  volatility.py  volume.py
src/scheduler/: runner.py
src/storage/: db.py
src/utils/: config.py  logging.py  settings.py
src/web/: api.py  app.py  broadcaster.py  ws.py
src/web/static/: app.js  index.html  style.css
tests/: fixtures.py  test_aggregator.py  test_graph_smoke.py  test_indicators.py
